Fix 'Printer settings are not saved'

A global QPrinter instance in class KMyMoneyApp is used to reuse the
printer settings.

BUG:405059
FIXED-IN:4.8.4